# investing

./: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
dashboards/: Dashboard.xlsx  Dashboard_CashFlow.xlsx  Dashboard_Regular.xlsx
data/: Dashboard_Financial.xlsx  data.json  fcf_data.json  master_data.xlsx  price.csv
data/finance_data/: BalanceSheet.xlsx
data/input_data/: ActualsEstimates.xlsx  BalanceSheet.xlsx  CashFlow.xlsx  RawData.xlsx  company_names.csv  params_cashflow.csv  params_dividends.csv  params_insurance.csv
data/input_data/raw_statements_data/: CashFlow.xlsx  IncomeStatement.xlsx  Multiples.xlsx  Ratios.xlsx
data/scratch/: DCF Calcs.xlsx
data/spreadsheets/: Stock Name List.xlsx
notebooks/: 1 Yahoo Finance Data.ipynb  2 Build Free Cash Flow.ipynb  2 Forecasts for Cash Flow.ipynb  2 Forecasts for Dividends.ipynb  2 Forecasts for Financials.ipynb  2 Forecasts for Insurance.ipynb  3 NPV Calculations.ipynb  3 NPV for Dividends.ipynb  3 NPV for Financials.ipynb  3 NPV for Free Cash Flow.ipynb  3 NPV for Insurance.ipynb  4 Unify NPV.ipynb  4 Valuation.ipynb  Build Free Cash Flow.ipynb  NPV Calculations.ipynb  Yahoo Finance Data.ipynb
src/: __init__.py
src/investing/: __init__.py
src/investing/config/: file_paths.py
src/investing/tools/: __init__.py  functions.py
src/investor/config/: __init__.py
