[metadata]
name = investing
author = Telamon McCullough
author_email = nomalet@gmail.com
description =  Toolkit to support investing

provides =
    investing
;can't use this as we are setting requirements in setup.py which breaks the wheel
;requires-dist = setuptools

[options]
setup_requires =
    setuptools
package_dir =
    =src
packages = find:

python_requires = >=3

# [options.extras_require]

[options.package_data]
* =  *.rst
     requirements.txt
     *.ini
     *.cfg
     *.md

[options.packages.find]
where=src

[tool:pytest]
norecursedirs=tests/utils
